# GD32C231_CMake_ArmClang

./: .gitignore  ARMClang_Cortex-M23.cmake  CMakeLists.txt  GD32.sct  lv_conf.h  main.c  test
Firmware/: README.md
Firmware/CMSIS/GD/GD32C2x1/Include/: gd32c2x1.h  gd32c2x1_err_report.h
Firmware/CMSIS/GD/GD32C2x1/Source/: gd32c2x1_err_report.c  system_gd32c2x1.c
Firmware/CMSIS/GD/GD32C2x1/Source/ARM/: startup_gd32c231_221.s
Firmware/CMSIS/GD/GD32C2x1/Source/GCC/: startup_gd32c231_221.S
Firmware/CMSIS/GD/GD32C2x1/Source/GCC/Ld/: gd32c2x1_flash.ld
Firmware/CMSIS/GD/GD32C2x1/Source/IAR/: startup_gd32c231_221.s
Firmware/GD32C2x1_standard_peripheral/Include/: gd32c2x1_adc.h  gd32c2x1_cmp.h  gd32c2x1_crc.h  gd32c2x1_dbg.h  gd32c2x1_dma.h  gd32c2x1_exti.h  gd32c2x1_fmc.h  gd32c2x1_fwdgt.h  gd32c2x1_gpio.h  gd32c2x1_i2c.h  gd32c2x1_libopt.h  gd32c2x1_misc.h  gd32c2x1_pmu.h  gd32c2x1_rcu.h  gd32c2x1_rtc.h  gd32c2x1_spi.h  gd32c2x1_syscfg.h  gd32c2x1_timer.h  gd32c2x1_usart.h  gd32c2x1_wwdgt.h
Firmware/GD32C2x1_standard_peripheral/Source/: gd32c2x1_adc.c  gd32c2x1_cmp.c  gd32c2x1_crc.c  gd32c2x1_dbg.c  gd32c2x1_dma.c  gd32c2x1_exti.c  gd32c2x1_fmc.c  gd32c2x1_fwdgt.c  gd32c2x1_gpio.c  gd32c2x1_i2c.c  gd32c2x1_misc.c  gd32c2x1_pmu.c  gd32c2x1_rcu.c  gd32c2x1_rtc.c  gd32c2x1_spi.c  gd32c2x1_syscfg.c  gd32c2x1_timer.c  gd32c2x1_usart.c  gd32c2x1_wwdgt.c
User/: gd32c2x1_libopt.h  lcd_spi.c  lcd_spi.h  lv_port_disp.c  lv_port_disp.h  systick.c  systick.h
